--- a/product-manager.html
+++ b/product-manager.html
@@ -40,6 +40,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.lever.co/miteksystems-2/cc5b14b0-a04c-441e-8dba-3980b560c364'>Mitek Systems - Senior Product Manager</a></h5> 
+<p><span class="badge badge-light">San Diego</span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
 <h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qyIaVfw5&k=Job&j=oYEuafw0&__jvst=Employee&__jvsd=sY5fThwX&__jvsc=Twitter&bid=n2ZjqMw1'>INNIO Careers - Service Product Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-31</p>
@@ -52,7 +56,7 @@
 <p><span class="badge badge-light">Boston, Massachusetts</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qJIaVfwg&k=Job&j=oAEqafwy&__jvst=Employee&__jvsd=seqSPhw7&__jvsc=Twitter&bid=nyYiqMwv'>MORI Associates, Inc. Careers - NASA - Software Product Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qJIaVfwg&k=Job&j=oAEqafwy&__jvst=Employee&__jvsd=seqSPhw7&__jvsc=Twitter&bid=nyYiqMwv'>MORI Associates, Inc. Careers - NASA - Software Product Manager</a></h5> 
 <p><span class="badge badge-light">Mountain View, California</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -60,7 +64,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/snowflakecomputing/jobs/4491127002'>Job Application for Product Manager- Data Exchange at Snowflake</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/snowflakecomputing/jobs/4491127002'>Job Application for Product Manager- Data Exchange at Snowflake</a></h5> 
 <p><span class="badge badge-light">San Mateo, California United States</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -106,7 +110,7 @@
 <p><span class="badge badge-light">Bengaluru</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://neimanmarcus.referrals.selectminds.com/jobs/associate-product-manager-12818'>Associate Product Manager - Neiman Marcus Group Careers Careers</a></h5> 
+<h5><a href='https://neimanmarcus.referrals.selectminds.com/jobs/associate-product-manager-12818'>Associate Product Manager - Neiman Marcus Group Careers Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -176,7 +180,7 @@
 <p><span class="badge badge-light">Palo Alto, CA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Visa/743999698610581-senior-technical-product-manager-machine-learning-data-platform-team'>Visa Senior Technical Product Manager, Machine Learning - Data Platform Team | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Visa/743999698610581-senior-technical-product-manager-machine-learning-data-platform-team'>Visa Senior Technical Product Manager, Machine Learning - Data Platform Team | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Palo Alto, CA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -196,7 +200,7 @@
 <p><span class="badge badge-light">Seattle, WASeattle Seattle, WASeattle, WA     Seattle, WA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://www.sonetjob.com/job/offer?id=43abe6eb2067e3ad&tc=jo-tw'>SonetJob | Offre d'emploi - Recherche et D?veloppement - Product Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.sonetjob.com/job/offer?id=43abe6eb2067e3ad&tc=jo-tw'>SonetJob | Offre d'emploi - Recherche et D?veloppement - Product Manager</a></h5> 
 <p><span class="badge badge-light">Toronto</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -212,7 +216,7 @@
 <p><span class="badge badge-light">Columbia, Maryland</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/tenable-network-security/job/o9Tsbfwp'>Tenable Careers - Senior Product Manager</a></h5> 
+<h5><a href='https://jobs.jobvite.com/tenable-network-security/job/o9Tsbfwp'>Tenable Careers - Senior Product Manager</a></h5> 
 <p><span class="badge badge-light">Columbia, Maryland</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -406,7 +410,7 @@
 <p><span class="badge badge-light">Bengaluru</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/ShopUp/743999698547791-product-manager'>ShopUp Product Manager | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/ShopUp/743999698547791-product-manager'>ShopUp Product Manager | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Dhaka, Bangladesh</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -448,10 +452,6 @@
 <hr/>
 <h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q9CaVfwA&k=Job&j=ouhcbfwS&__jvst=Employee&__jvsd=sqltphwp&__jvsc=Twitter&bid=nSzgpMwn'>Compuware Careers - Product Manager</a></h5> 
 <p><span class="badge badge-light">Detroit</span></p>
-<p>Posted on:: 2019-10-30</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qzH9Vfw4&k=Job&j=oEG79fwk&__jvst=Employee&__jvsd=sysSTfwv&__jvsc=Twitter&bid=n2EfpMwB'>Liferay, Inc. Careers - Product Designer</a></h5> 
-<p><span class="badge badge-light">Brazil</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
 
